* added RabbitMQ initially * fixed unit test